deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: warden
  namespace: warden
  labels:
    app: warden
spec:
  selector:
    app: warden
  ports:
    - name: http
      port: 80
      targetPort: 8080
