deploy/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: warden
  namespace: warden
spec:
  entryPoints:
    - vpn
  routes:
    - match: Host(`warden-rs-manager.ardenone.com`)
      kind: Rule
      services:
        - name: warden
          port: 80
  tls:
    secretName: warden-tls
